--- a/demo.css
+++ b/demo.css
@@ -240,6 +240,8 @@ input[type="submit"].gameControls
     height: 142px;
     position: relative;
     top: -8px;
+    align-content: center;
+    text-align: center;
 }
 
 #buttonSolve
