--- a/demo.css
+++ b/demo.css
@@ -82,7 +82,6 @@ a:hover
     box-shadow: 0px 0px 30px #000000;
     -moz-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.51);
     -webkit-box-shadow: 0 0 30px #000000;
-    align-content: center;
 }
 
 #Column2
@@ -161,6 +160,7 @@ label
     line-height: 24px;
     font-size: 16px;
     color: #000000;
+    margin-left: 20px;
 }
 
 select
@@ -241,8 +241,7 @@ input[type="submit"].gameControls
     height: 142px;
     position: relative;
     top: -8px;
-    align-content: center;
-    text-align: center;
+    margin-left: 40px;
 }
 
 #buttonSolve
