--- a/demo.css
+++ b/demo.css
@@ -2,7 +2,7 @@
 {
     margin: 0;
     padding: 0;
-    overflow: auto;  /* 스크롤바 제거 */
+    overflow:hidden;  /* 스크롤바 제거 */
     width: 100%;       /* 최대 너비 설정 */
     height: 100%;      /* 최대 높이 설정 */
 }
@@ -40,7 +40,7 @@ b
 
 #Main,#Content,#Footer
 {
-    width: 980px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -66,21 +66,27 @@ a:hover
 
 #Content
 {
-    float: left;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
 }
 
 #Column1
 {
     width: 300px;
-    float: left;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
 }
 
 #sudokuBoard
 {
     width: 318px;
-    margin-left: 10px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 20px;
-    float: left;
     box-shadow: 0px 0px 30px #000000;
     -moz-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.51);
     -webkit-box-shadow: 0 0 30px #000000;
@@ -89,9 +95,7 @@ a:hover
 #Column2
 {
     width: 174px;
-    margin-left: 40px;
-    float: left;
-}
+    margin-left: 40px;}
 
 #Footer
 {
@@ -101,13 +105,11 @@ a:hover
 
 #FooterDetails
 {
-    float: left;
     font-size: 11px;
 }
 
 #Copyright
 {
-    float: right;
     font-size: 10px;
 }
 
@@ -241,9 +243,11 @@ input[type="submit"].gameControls
 {
     height: 60px;
     position: relative;
-    margin-left: 40px;
     display: flex;        /* Flexbox 모델을 사용하여 자식 요소들을 행으로 배치 */
-    align-items: center;  /* 자식 요소들을 세로 중앙에 맞춤 */
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
 }
 
 #buttonSolve
@@ -298,11 +302,4 @@ small
 .error
 {
     border: 1px solid #f10a0a;
-}
-
-@media (max-width: 300px) {
-    .boardCell, .boardCellGroupA, .boardCellGroupB {
-        width: 35px; /* 원래 크기보다 작게 조정 */
-        height: 35px; /* 원래 크기보다 작게 조정 */
-    }
 }
