--- a/demo.css
+++ b/demo.css
@@ -242,7 +242,7 @@ input[type="submit"].gameControls
 
 .gameControlSet
 {
-    height: 60px;
+    height: 40px;
     position: relative;
     display: flex;        /* Flexbox 모델을 사용하여 자식 요소들을 행으로 배치 */
     align-content: center;
@@ -269,8 +269,8 @@ input[type="submit"].gameControls
 
 #youWon div
 {
-    width: 400px;
-    background: #940302;
+    width: 80%;
+    background: rgba(0, 0, 0, 0.55);
     font-size: 40px;
     color: #FFFFFF;
     text-align: center;
