--- a/demo.css
+++ b/demo.css
@@ -161,9 +161,9 @@ td.boardCellGroupB td.boardCell
 label
 {
     position: relative;
-    top: 3px;
-    line-height: 20px;
-    font-size: 12px;
+    /*top: 3px;*/
+    line-height: 30px;
+    font-size: 20px;
     color: #000000;
     margin-left: 20px;
 }
@@ -173,13 +173,13 @@ select
     font-family: Arial;
     color: #000000;
     font-weight: normal;
-    font-size: 12px;
-    border-top: solid 1px #CCCCCC;
-    border-left: solid 1px #E2E3EA;
-    border-bottom: solid 1px #FFFFFF;
-    border-right: solid 1px #E2E3EA;
-    margin: 3px 0px;
-    min-width: 100px;
+    font-size: 15px;
+    border-top: solid 1px #000000;
+    border-left: solid 1px #000000;
+    border-bottom: solid 1px #000000;
+    border-right: solid 1px #000000;
+    margin: 0px 0px;
+    min-width: 80px;
     background: #FDFDFD;
 }
 
